Archive2/39/5e912802073131/output
main.cpp:16:9: error: type/value mismatch at argument 2 in template parameter list for 'template<class _From, class _To> struct std::is_convertible'
         >::value )
         ^
main.cpp:16:9: error:   expected a type, got 'inferred_integer<T>::data_t'
